--- a/hardco-porfolio/public/index.html
+++ b/hardco-porfolio/public/index.html
@@ -15,11 +15,17 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     /> -->
     <title>Hardco-Profolio website</title>
+    <script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
+    <script src="https://unpkg.com/smoothscroll-anchor-polyfill"></script>
     <style>
       *{
         font-family: 'Roboto', sans-serif;
         margin:0;
         overflow-x: hidden;
+      }
+      * {
+        --scroll-behavior: smooth;
+        scroll-behavior: smooth;
       }
     </style>
   </head>
